tests/NormalTests/paczka1/fuzzy1/20747753.err
Error in line 3: DMaYev3wr S794 58,8
Error in line 6: DMaYev3wr S310 57,3
Error in line 4: PUd0CBK5 S310 79,2
Error in line 16: PUd0CBK5 S664 50,9
Error in line 22: tJbVKU S310 42,4
Error in line 32: S28 S794 6,37
Error in line 23: S28 S664 53,4
Error in line 33: C40Kt S664 38,6
Error in line 36: ULboPc S664 81,6
